--- a/styles.css
+++ b/styles.css
@@ -19,24 +19,42 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+}
+
+body > div {
+  width: 70vw;
+}
+
+#header {
+  background-color: rgb(67, 67, 67);
+  font-size: 1.5rem;
+  padding: 0 36px;
 }
 
 h1 {
-  font-size: 24px;
-  padding: 30px 0px 20px 0px;
+  font-size: 2rem;
+  padding: 15px;
 }
 
 #content {
-  padding-top: 24px;
+  padding: 36px;
   background-color: grey;
-  display: flex;
-  flex-direction: column;
+  display: grid;
   justify-content: start;
-  grid-template-columns: 1fr;
-  gap: 24px;
+  grid-template: 100px 100px / 1fr 1fr;
   flex: 1;
+  gap: 8px;
+}
+
+a {
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 a:hover {
   color: rgba(69, 199, 250, 0.795);
+  background-color: rgb(71, 71, 71);
 }
